update to atm6 1.5.10